error handeling and design changes

--- a/automations/templates/run_automation.html
+++ b/automations/templates/run_automation.html
@@ -33,53 +33,96 @@
                                 <input 
                                 id="{{ requirement.Label }}" name="{{ app_name }}-input" 
                                 class="w-full border-[1px] border-solid border-[#302E2E]/50 font-light h-[40px] px-6 py-5 rounded-lg mt-2" 
-                                type="{{ requirement.Type }}">
+                                type="{{ requirement.Type }}"
+                                >
                             {%endif%}
                         </div>
                     {%endif%}
              {%endfor%}
-             <button class="bg-[#4ADE80] mt-8 w-[200px] col-start-1 col-end-1 font-semibold rounded-lg h-[40px]" onclick="run_test('{{goto}}' ,location.pathname.split('/')[2])">RUN</button>
+            <div class="w-full">
+                <h2 class="text-xl font-semibold">N. Orders</h2>
+                <input 
+                   onchange="this.value > 10 ? alert('Please Enter less than 10 orders') : this.value"
+                   id="N. Orders" name="{{ app_name }}-input" 
+                   class="w-full border-[1px] border-solid border-[#302E2E]/50 font-light h-[40px] px-6 py-5 rounded-lg mt-2" 
+                   type="Number"
+                   
+                   >
+            </div>
+            <div class="w-full">
+                <h2 class="text-xl font-semibold">Applicants</h2>
+                <input 
+                onchange="this.value > 6 ? alert('Please Enter less than 7 applicants') : this.value"
+                id="Applicants" name="{{ app_name }}-input" 
+                class="w-full border-[1px] border-solid border-[#302E2E]/50 font-light h-[40px] px-6 py-5 rounded-lg mt-2" 
+                type="Number"
+                max="7">
+            </div>
+            <button class="bg-[#4ADE80] mt-8 w-[200px] col-start-1 col-end-1 font-semibold rounded-lg h-[40px]" onclick="run_test('{{goto}}' ,location.pathname.split('/')[2])">RUN</button>
         </div>
     </div>
     <div id="automation_running" class="hidden bg-[#302E2E]/50 top-0 w-full h-screen">
-        <div class="w-2/5 bg-white h-1/2 left-[30%] top-1/4 relative border-2 border-solid border-[#302E2E] rounded-lg">
-            <div class="flex flex-col justify-evenly px-24  items-center h-full">
-                <h2 class="text-[32px] font-semibold text-center">Running automations</h2>
-                <p class="text-xl font-medium text-center">(This is going to take a while so go ahead and make yourself a coffee while you wait)</p>
-                <img class="w-12 animate-spin" src="../static/images/loading.png">
-                <div class="tenor-gif-embed relative left-2" data-postid="13657985" data-share-method="host" data-aspect-ratio="1" data-width="20%">
-                    <a href="https://tenor.com/view/coffee-cup-of-coffee-drinking-coffee-pusheen-tea-time-gif-13657985">Coffee Cup Of Coffee Sticker</a>
-                </div>
-            </div>
-        </div> 
-    </div>
-    <div id="automation_failed" class="hidden bg-[#302E2E]/50 top-0 w-full h-screen">
-        <div class="w-fit bg-white h-fit left-[18%] top-[20%] relative border-2 border-solid border-[#302E2E] rounded-lg">
-            <div class="flex flex-col justify-evenly p-9  items-center h-full">
-                <h2 class="text-[32px] font-semibold text-center mb-8">There was an error</h2>
-                <h2 
-                onclick="document.getElementById('automation_failed').classList.add('hidden')"
-                class="text-[18px] font-semibold absolute top-5 right-16 cursor-pointer">
-                    X
-                </h2>
-                <div class="flex w-full justify-between items-center">
-                    <div class="w-1/2 ml-12">
-                        <p class="text-xl font-medium text-center">There could be a couple of reasons why:</p>
-                        <ul class="text-base font-normal text-center list-disc" >
-                            <li class="my-4">If no orders where made please check that the URL is correct and is available</li>
-                            <li class="my-4" >Network error: Please try to run the automation again with a different email</li>
-                            <li class="my-4">You used an email that already has an account, please try again with another account</li>
+        <div class="w-full h-full flex justify-center items-center">
+            <div class="w-4/6 px-11 max-w-[1000px] bg-white h-1/2 max-h-[500px] border-2 border-solid border-[#302E2E] rounded-lg">
+                <div class="flex justify-between items-center h-full">
+                    <div class="flex flex-col w-2/4">
+                        <div class="flex justify-evenly"> 
+                            <h2 class="text-[32px] font-semibold text-center mb-5">Running automations</h2>
+                            <img class="w-12 h-12 animate-spin" src="../static/images/loading.png">
+                        </div>
+                        <p class="text-xl font-medium text-center mb-5">(This is going to take a while so go ahead and make yourself a coffee while you wait)</p>
+                        <p class="text-center">Sometimes the automation finishes but the response takes time to get to us, you can login to the email with this password and check the progress</p>
+                        <ul class="flex justify-evenly mt-4">
+                            <div>
+                                <li class="font-semibold">Email:</li>
+                                <li id="user_email_status"></li>
+                            </div>
+                            <div>
+                                <li class="font-semibold">Password:</li>
+                                <li>testivisa5!</li>
+                            </div>
                         </ul>
                     </div>
-                    <div class="tenor-gif-embed w-[10px] h-[200px] m-0" data-postid="8085108947907151027" data-share-method="host" data-aspect-ratio="1.04622" data-width="40%">
-                        <a href="https://tenor.com/view/%E3%81%82-gif-8085108947907151027">あ GIF</a>from <a href="https://tenor.com/search/%E3%81%82-gifs">あ GIFs</a>
+                    <div class="w-2/6 max-w-[290px]">
+                        <div class="tenor-gif-embed relative left-2" data-postid="13657985" data-share-method="host" data-aspect-ratio="1" data-width="100%">
+                            <a href="https://tenor.com/view/coffee-cup-of-coffee-drinking-coffee-pusheen-tea-time-gif-13657985">Coffee Cup Of Coffee Sticker</a>
+                        </div>
                     </div>
-                </div>      
-                <div>
-                    <p class="text-center">If nothing of the above works then contact me so i can check if something is wrong</p>
                 </div>
-            </div>
-        </div> 
+            </div> 
+        </div>
+    </div>
+    <div id="automation_failed" class="hidden bg-[#302E2E]/50 top-0 w-full h-screen">
+        <div class="w-full h-full flex justify-center items-center">
+            <div class="w-fit bg-white h-fit border-2 border-solid border-[#302E2E] rounded-lg">
+                <div class="flex flex-col justify-evenly p-9  items-center h-full">
+                    <h2 class="text-[32px] font-semibold text-center mb-8">There was an error</h2>
+                    <div class="w-full relative h-full">
+                        <h2 
+                        onclick="document.getElementById('automation_failed').classList.add('hidden')"
+                        class="text-[18px] font-semibold cursor-pointer absolute bottom-16 right-0">
+                            X
+                        </h2>
+                    </div>
+                    <div class="flex w-full justify-between items-center">
+                        <div class="w-1/2 ml-12">
+                            <p class="text-xl font-medium text-center">There could be a couple of reasons why:</p>
+                            <ul class="text-base font-normal text-center list-disc" >
+                                <li class="my-4">If no orders where made please check that the URL is correct and is available</li>
+                                <li class="my-4" >Network error: Please try to run the automation again with a different email</li>
+                                <li class="my-4">You used an email that already has an account, please try again with another account</li>
+                            </ul>
+                        </div>
+                        <div class="tenor-gif-embed w-[10px] h-[200px] m-0" data-postid="8085108947907151027" data-share-method="host" data-aspect-ratio="1.04622" data-width="40%">
+                            <a href="https://tenor.com/view/%E3%81%82-gif-8085108947907151027">あ GIF</a>from <a href="https://tenor.com/search/%E3%81%82-gifs">あ GIFs</a>
+                        </div>
+                    </div>      
+                    <div>
+                        <p class="text-center">If nothing of the above works then contact me so i can check if something is wrong</p>
+                    </div>
+                </div>
+            </div> 
+        </div>
     </div> 
     <div id="automation_results" class="w-9/12 h-fit hidden">
         <div class="w-full bg-white h-fit flex justify-between px-12 py-8 rounded-xl border-solid border-[#4ADE80] border-2 ">
@@ -131,7 +174,7 @@
         }
         document.getElementById('automation_running').classList.remove('hidden')
         document.getElementById('automation_running').classList.add('absolute')
-
+        document.getElementById('user_email_status').textContent = variables.filter((value) => value.type === 'Email')[0].value
         await fetch(`/run-automation/${value.split('%20').join(' ')}`,{
             method: 'POST',
             headers: {'Content-Type':'application/json'},
@@ -139,8 +182,7 @@
         })
         .then((res) => res.json())
         .then((val) => {
-            console.log(val)
-            if(val){
+            if(val.length > 0){
                 document.getElementById('set_variables').classList.add('hidden')
                 document.getElementById('automation_running').classList.add('hidden')
                 document.getElementById('automation_results').classList.remove('hidden')
@@ -164,6 +206,7 @@
                     order_status_container.append(order_status)
                 }
             }else{
+                console.log(val)
                 document.getElementById('set_variables').classList.add('hidden')
                 document.getElementById('automation_running').classList.add('hidden')
                 document.getElementById('automation_failed').classList.remove('hidden')
@@ -171,6 +214,8 @@
                 document.getElementById('automation_results').classList.remove('hidden')
                 document.getElementById('automation_results').classList.add('content')
                 document.getElementById('main_title').textContent = 'Automation Failed'
+                const getEmail = variables.filter((value) => value.type === 'Email')
+                document.getElementsByName('user_email')[0].textContent = getEmail[0].value
             }
         })
     }
